@@ -34,6 +34,7 @@ Changes:
   - NEW: adding to SPECIAL_MEANINGS in LatestRevisionStrategy (IVY-121)
   - NEW: Allow use of system properties in ivyconf.xml (IVY-228)
 
+  - IMPROVE: deliver task use a default value for revision (IVY-252)
   - IMPROVE: better documentation distribution (IVY-274) - in progress
   - IMPROVE: define conflict manager per organisation/module in ivyconf (IVY-270)
   - IMPROVE: transitive parameter in resolve (IVY-21)
